Card content Design alignment Fix. with html css

--- a/Stats preview card component/css/style.css
+++ b/Stats preview card component/css/style.css
@@ -3,8 +3,8 @@ body {
 }
 
 .pb {
-  padding: 150px;
-  padding-left: 20% !important;
+  padding: 200px;
+  padding-left: 16% !important;
 }
 
 p {
@@ -14,10 +14,30 @@ p {
 .card {
   color: white;
   width: 100% !important;
+  border-radius: 10px !important;
   background-color: #1c1938 !important;
   position: relative !important;
+}
+.card-title {
+  font-weight: 700;
 }
 
 img {
   position: absolute !important;
+  border-radius: 10px;
+}
+
+.text-body-secondary {
+  font-size: 18px;
+}
+.set-info {
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+.companies {
+  font-weight: 700;
+  margin-top: 26px;
+  text-indent: -40px;
+  padding-right: 44px;
 }
